# gnome-builder-vala-blueprint-template

./: README.md  com.github.gnomebuldervalablueprinttemplate.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.github.gnomebuldervalablueprinttemplate.json/: build-blueprint-compiler  init
.flatpak-builder/checksums/: x86_64-com.github.gnomebuldervalablueprinttemplate.json
data/: com.github.gnomebuldervalablueprinttemplate.appdata.xml.in  com.github.gnomebuldervalablueprinttemplate.desktop.in  com.github.gnomebuldervalablueprinttemplate.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  gnome-builder-vala-blueprint-template.gresource.xml  main.vala  meson.build  window.blp  window.ui  window.vala
